--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.4.2",
     "workbox-broadcast-update": "^6.4.2",
