--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.3",
     "typescript": "^4.4.2",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4",
